--- a/Login.xaml
+++ b/Login.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    MaxHeight="5500"
+    MaxHeight="500"
     MaxWidth="350"
     MinHeight="500"
     MinWidth="350"
@@ -7,7 +7,6 @@
     x:Class="Schedule.Login"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Schedule"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StackPanel Background="DarkSlateGray">
@@ -49,11 +48,10 @@
         <TextBox
             Background="Transparent"
             Cursor="Hand"
-            FontSize="12"
-            FontStretch="Normal"
-            FontStyle="Oblique"
+            FontSize="18"
+            FontStyle="Normal"
             FontWeight="Bold"
-            Foreground="Black"
+            Foreground="White"
             Height="30"
             Margin="100,0,100,0" />
 
@@ -72,10 +70,10 @@
         <PasswordBox
             Background="Transparent"
             Cursor="Hand"
-            FontSize="12"
-            FontStretch="Medium"
-            FontStyle="Oblique"
+            FontSize="18"
+            FontStyle="Normal"
             FontWeight="Bold"
+            Foreground="White"
             Height="30"
             Margin="100,0,100,50" />
 
